Use provision.sh in Vagrantfile

--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -8,6 +8,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
 
+  config.vm.provision "shell", path: "provision.sh"
   config.vm.provider "virtualbox" do |vb|
     vb.name = "kubos"
     vb.customize ['modifyvm', :id, '--usbehci', 'on']
