--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -8,7 +8,18 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
 
-  config.vm.provision "shell", path: "provision.sh"
+  config.vm.provision "shell", inline: %Q{
+      apt-get -y install build-essential libssl-dev libffi-dev
+      apt-get -y install python-setuptools python-dev
+      apt-get -y install python-pip
+      add-apt-repository ppa:git-core/ppa
+      apt-get -y install git
+      mkdir /home/vagrant/.kubos
+      # pip install kubos-cli
+      # kubos update
+      git clone https://github.com/kubostech/kubos.git /home/vagrant/.kubos
+      cd /home/vagrant/.kubos && git fetch --all
+  }
   config.vm.provider "virtualbox" do |vb|
     vb.name = "kubos"
     vb.customize ['modifyvm', :id, '--usbehci', 'on']
