--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -9,16 +9,25 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
 
   config.vm.provision "shell", inline: %Q{
+      apt-get update
       apt-get -y install build-essential libssl-dev libffi-dev
-      apt-get -y install python-setuptools python-dev
+      apt-get install -y python-setuptools build-essential ninja-build python-dev libffi-dev libssl-dev gcc-arm-embedded git
       apt-get -y install python-pip
       add-apt-repository ppa:git-core/ppa
       apt-get -y install git
-      mkdir /home/vagrant/.kubos
+      add-apt-repository ppa:team-gcc-arm-embedded/ppa
+      add-apt-repository ppa:george-edison55/cmake-3.x
+      apt-get install -y cmake=3.2.2-2~ubuntu14.04.1~ppa1
+      apt-get install -y gcc-msp430 gdb-msp430 msp430-libc
+
+      mkdir -p /home/vagrant/.kubos
+      easy_install pip
       # pip install kubos-cli
       # kubos update
       git clone https://github.com/kubostech/kubos.git /home/vagrant/.kubos
       cd /home/vagrant/.kubos && git fetch --all
+
+      apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
   }
   config.vm.provider "virtualbox" do |vb|
     vb.name = "kubos"
