--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -20,9 +20,8 @@ Vagrant.configure("2") do |config|
       apt-get install -y cmake=3.2.2-2~ubuntu14.04.1~ppa1
       apt-get install -y gcc-msp430 gdb-msp430 msp430-libc
 
-      mkdir -p /home/vagrant/.kubos
-      # pip install kubos-cli
-      # kubos update
+      pip install kubos-cli
+      kubos update
 
       # TODO: removed the lines below and replace with `kubos update`
       git clone https://github.com/kubostech/kubos.git /home/vagrant/.kubos
