--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -10,24 +10,27 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell", inline: %Q{
       apt-get update
-      apt-get -y install build-essential libssl-dev libffi-dev
-      apt-get install -y python-setuptools build-essential ninja-build python-dev libffi-dev libssl-dev gcc-arm-embedded git
-      apt-get -y install python-pip
-      add-apt-repository ppa:git-core/ppa
-      apt-get -y install git
       add-apt-repository ppa:team-gcc-arm-embedded/ppa
       add-apt-repository ppa:george-edison55/cmake-3.x
-      apt-get install -y cmake=3.2.2-2~ubuntu14.04.1~ppa1
+      add-apt-repository ppa:git-core/ppa
+      apt-get update
+      apt-get -y install build-essential libssl-dev libffi-dev
+      apt-get install -y python-setuptools build-essential ninja-build python-dev libffi-dev libssl-dev
+      apt-get install -y gcc-arm-none-eabi
+      apt-get -y install python-pip
+      apt-get -y install git
+      apt-get install -y cmake
       apt-get install -y gcc-msp430 gdb-msp430 msp430-libc
-      apt-get install mspdebug
 
       # flash tools
+      apt-get install mspdebug
       apt-get install dfu-util
       apt-get install openocd
 
       # download libmsp430.so
       wget -P /usr/lib https://github.com/kubostech/kubos/raw/vagrant-provision/vm/lib/libmsp430.so
 
+      pip install --upgrade pip
       pip install kubos-cli
       kubos update
 
