--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -10,13 +10,13 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell", inline: %Q{
       apt-get update
-      add-apt-repository ppa:team-gcc-arm-embedded/ppa
-      add-apt-repository ppa:george-edison55/cmake-3.x
-      add-apt-repository ppa:git-core/ppa
+      add-apt-repository -y ppa:team-gcc-arm-embedded/ppa
+      add-apt-repository -y ppa:george-edison55/cmake-3.x
+      add-apt-repository -y ppa:git-core/ppa
       apt-get update
       apt-get -y install build-essential libssl-dev libffi-dev
       apt-get install -y python-setuptools build-essential ninja-build python-dev libffi-dev libssl-dev
-      apt-get install -y gcc-arm-none-eabi
+      apt-get install -y gcc-arm-embedded
       apt-get -y install python-pip
       apt-get -y install git
       apt-get install -y cmake
