--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -33,6 +33,7 @@ Vagrant.configure("2") do |config|
       pip install --upgrade pip
       pip install kubos-cli
       kubos update
+      mv ~/.kubos /home/ubuntu/
 
       apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
   }
