Fixed beacon and health threads to check the proper csp ports. Added some temp code for beacon and health to fill up their data arrays. Modified code generation tool to insert new destination flags.

--- a/telemetry/example/config.json
+++ b/telemetry/example/config.json
@@ -12,7 +12,9 @@
         "temp":{
           "health": 20
         },
-        "pos_x": true,
+        "pos_x": {
+          "beacon":true
+        },
         "pos_y":{
           "beacon":true
         }
